--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -40,7 +40,7 @@ $grey-dk-200: #44434d !default;
 $grey-dk-250: #302d36 !default;
 $grey-dk-300: #27262b !default;
 
-$grey-lt-000: #f5f6fa !default;
+$grey-lt-000: #ffffff !default;
 $grey-lt-100: #eeebee !default;
 $grey-lt-200: #ecebed !default;
 $grey-lt-300: #e6e1e8 !default;
@@ -65,7 +65,7 @@ $yellow-100: #fadf50 !default;
 $yellow-200: #f7d12e !default;
 $yellow-300: #e7af06 !default;
 
-$red-000: #f77e7e !default;
+$red-000: #942A2A !default;
 $red-100: #f96e65 !default;
 $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
@@ -81,8 +81,8 @@ $body-text-color: $grey-dk-100 !default;
 $body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $purple-000 !default;
-$btn-primary-color: $purple-100 !default;
+$link-color: $red-000 !default;
+$btn-primary-color: $red-100 !default;
 $base-button-color: #f7f7f7 !default;
 
 //
