--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -60,7 +60,7 @@ $green-100: #11b584 !default;
 $green-200: #009c7b !default;
 $green-300: #026e57 !default;
 
-$yellow-000: #ffeb82 !default;
+$yellow-000: lightyellow !default;
 $yellow-100: #fadf50 !default;
 $yellow-200: #f7d12e !default;
 $yellow-300: #e7af06 !default;
@@ -74,7 +74,7 @@ $body-background-color: $white !default;
 $sidebar-color: $grey-lt-000 !default;
 $search-background-color: $white !default;
 $table-background-color: $white !default;
-$code-background-color: $grey-lt-000 !default;
+$code-background-color: $yellow-000 !default;
 $feedback-color: darken($sidebar-color, 3%) !default;
 
 $body-text-color: $grey-dk-100 !default;
